adds vm.start property to TopStoriesController

--- a/views/top-stories.html
+++ b/views/top-stories.html
@@ -9,4 +9,4 @@
     </div>
   </li>
 </ul>
-<dir-pagination-controls></dir-pagination-controls>
+<dir-pagination-controls on-page-change="updatePage(newPageNumber, oldPageNumber)"></dir-pagination-controls>
