--- a/views/story-comments.html
+++ b/views/story-comments.html
@@ -1,2 +1,11 @@
 <h2>These are the comments</h2>
 <story id="vm.id"></story>
+
+<form>
+  <p>
+    <textarea name="comment" id="comment" cols="50" rows="6"></textarea>
+  </p>
+  <p>
+    <button>Add Comment</button>
+  </p>
+</form>
