adds links between post show page and top stories page

--- a/views/story.html
+++ b/views/story.html
@@ -10,6 +10,6 @@
                     'other': '{} points'
                   }">
     </ng-pluralize>
-    by {{ vm.author }} {{ vm.time }} | <a href="" class="hide">Hide</a> | {{ vm.numComments }}
+    by {{ vm.author }} {{ vm.time }} | <a href="" class="hide">Hide</a> | <a href="" ui-sref="post({ id: {{ vm.id }} })">{{ vm.numComments }}</a>
   </div>
 </div>
