--- a/views/topstories.html
+++ b/views/topstories.html
@@ -1,5 +1,4 @@
-<page-changer pageNum="yes" i="Yes"></page-changer>
-{{storiesCtrl.pageNum}}{{storiesCtrl.pageNum}}
+<page-changer></page-changer>
 
 <div class="posts" ng-repeat="id in storiesCtrl.stories">
   <post-item class="posts" i=$index id=id></post-item>
