--- a/views/pagechanger.html
+++ b/views/pagechanger.html
@@ -1,7 +1,7 @@
 <button ng-click="pcCtrl.increasePage()">+
 </button>
-{{pcCtrl.pageNum}}
-{{pcCtrl.test}}
+{{pcCtrl.page}}
+
 
 
 <button ng-click="pcCtrl.decreasePage()">-
