--- a/views/postitem.html
+++ b/views/postitem.html
@@ -1,7 +1,13 @@
-<div class="post">
-  {{postCtrl.i + 1}}<h3 class="post__title">{{postCtrl.post.title}}</h3>
-  by:{{postCtrl.post.by}}
-  <p>
-  Full Post at:  {{postCtrl.post.url}}
-  </p>
+<div>
+  {{postCtrl.i + 1}}<div class="post__title">{{postCtrl.post.title}}</div>
+  by:{{postCtrl.post.by}} <br> <a href="" ui-sref="post({id: postCtrl.post.id})">View Post</a>
+  Full Post at:  <a href={{postCtrl.post.url}}>{{postCtrl.post.url}}</a> <br>
+  Number of Comments: {{postCtrl.post.kids.length}}
+</div>
+
+<br>
+<br>
+Comments:
+<div ng-repeat="id in postCtrl.post.kids">
+  <comments id=id></comments>
 </div>
