--- a/views/topstories.html
+++ b/views/topstories.html
@@ -1,5 +1,8 @@
-<page-changer></page-changer>
+<button ng-click="storiesCtrl.decreasePage()">Previous</button>
+{{storiesCtrl.pageNum}}
+<button ng-click="storiesCtrl.increasePage()">Next</button>
 
-<div class="posts" ng-repeat="id in storiesCtrl.stories">
-  <post-item class="posts" i=$index id=id></post-item>
+
+  <div class="posts" ng-if="storiesCtrl.stories" ng-repeat="id in storiesCtrl.stories | myPagination: storiesCtrl.pageNum">
+    <post-item class="posts" i=$index id=id></post-item>
   </div>
