--- a/js/app/views/top-stories.html
+++ b/js/app/views/top-stories.html
@@ -1,7 +1,7 @@
   Hello from Top Stories state view!
   <ul>
     <li ng-repeat="post in top.posts">
-      <item id="post"> {{ post }}</item>
+      <item id="post"></item>
     </li>
   </ul>
 
