--- a/js/app/views/post.html
+++ b/js/app/views/post.html
@@ -1,1 +1,12 @@
-{{ post.data }}
+<div>
+  Title: {{ post.data.title }}<br />
+  Link: {{ post.data.url }}<br />
+  Comments No.: {{ post.data.kids.length.toString() }}<br />
+  Score: {{ post.data.score }}<br />
+  <br />
+  <ul>
+    <li ng-repeat="comment in post.data.kids">
+      <item id="comment"></item>    
+    </li>
+  </ul>
+</div>
