--- a/js/app/views/top-stories.html
+++ b/js/app/views/top-stories.html
@@ -1,8 +1,13 @@
 <h1>Top Stories Template</h1>
+<div>
+  <ul>
+    <li ng-repeat="post in top.posts">
+      <item id="post"> {{ post }}</item>
+    </li>
+  </ul>
+</div>
 
-
-
-
+<!-- pagination -->
 <div>
   Page {{ top.page }} of {{ top.total_pages }}
 </div>
