add 'item' component

--- a/js/app/views/top-stories.html
+++ b/js/app/views/top-stories.html
@@ -2,7 +2,7 @@
 <div>
   <ul>
     <li ng-repeat="post in top.posts">
-      <item id="post"> {{ post }}</item>
+      <item id="post"></item>
     </li>
   </ul>
 </div>
