add link in 'item' to view specific post

--- a/js/app/views/item.html
+++ b/js/app/views/item.html
@@ -13,7 +13,11 @@
       title:"What It Costs to Run Let's Encrypt"
       type:"story"
       url:"https://letsencrypt.org/2016/09/20/what-it-costs-to-run-lets-encrypt.html" -->
-      <a href="{{ item.data.url }}" target="_blank">{{ item.data.title }}</a>    
+      <a href="{{ item.data.url }}" target="_blank">{{ item.data.title }}</a><br />
+      More:
+      <a href="" ui-sref="post({ id: item.data.id })">
+        {{ item.data.descendants }} comments and {{ item.data.score }} points
+      </a>    
   </div>  
 </div>
 
