insert sanitized HTML into 'item' template

--- a/js/app/views/item.html
+++ b/js/app/views/item.html
@@ -12,6 +12,11 @@
     time:1474394419
     type:"comment" 
     -->
+
+    <div ng-bind-html="item.data.text">
+    <!-- insert sanitized data here -->
+    </div>
+    
     
   </div>
 
