--- a/js/app/views/post.html
+++ b/js/app/views/post.html
@@ -3,4 +3,24 @@
   <h2>{{ctrl.story.title}}</h2> <a ng-href="{{ctrl.story.url}}">Link</a>
   <p>Score: {{ctrl.story.score}} | {{ctrl.story.kids.length}} Comments | By: {{ctrl.story.by}}</p>
 
+
+  <div ng-repeat="comment in ctrl.comments">
+    hello!
+  </div>
+
 </div>
+
+
+<div ng-controller="CommentsController as ctrl">
+
+{{ctrl.story}}
+
+ <div ng-repeat="comment in ctrl.comments">
+    hello!
+  </div>
+
+</div>
+
+
+
+
