--- a/js/app/views/top.html
+++ b/js/app/views/top.html
@@ -1,13 +1,1 @@
-<div ng-controller="PostsController as ctrl">
-
-  <p>{{ctrl.pages}} pages </p>
-  <input value="Next Page" type="button" ng-click="ctrl.nextPage()"/>
-  <input value="Previous Page" type="button" ng-click="ctrl.previousPage()"/>
-
-  <div ng-repeat="story in ctrl.topStories">
-    <h2>{{$index + 1}} {{story.title}} <a ng-href="{{story.url}}">Link</a></h2> 
-    <p>Score: {{story.score}} | {{story.kids.length}} Comments | By: {{story.by}}</p>
-     <a ui-sref="post({id: {{story.id}} })">Read More </a> 
-  </div>
-
-</div>
+<posts-component></posts-component>
