add httpAsync and track by to posts and comments

--- a/js/app/views/CommentComponent.html
+++ b/js/app/views/CommentComponent.html
@@ -1,4 +1,4 @@
-<div ng-repeat="comment in ctrl.comments" >
+<div ng-repeat="comment in ctrl.comments track by comment.id" >
   <h4 ng-bind-html="comment.by"></h4>
   <p ng-bind-html="comment.text"></p>
 </div>
