--- a/js/app/views/PostsComponent.html
+++ b/js/app/views/PostsComponent.html
@@ -4,7 +4,7 @@
   <input value="Next Page" type="button" ng-click="ctrl.nextPage()"/>
   <input value="Previous Page" type="button" ng-click="ctrl.previousPage()"/>
 
-  <div ng-repeat="story in ctrl.topStories">
+  <div ng-repeat="story in ctrl.topStories track by story.id">
     <h2>{{$index + 1}} {{story.title}} <a ng-href="{{story.url}}">Link</a></h2> 
     <p>Score: {{story.score}} | {{story.kids.length}} Comments | By: {{story.by}}</p>
      <a ui-sref="post({id: {{story.id}} })">Read More </a> 
