added test component and routes, resolves working but WIP

--- a/js/app/views/post.html
+++ b/js/app/views/post.html
@@ -1,2 +1,3 @@
-<post-component></post-component>
+<h2>{{ctrl.story.title}}</h2> <a ng-href="{{ctrl.story.url}}">Link</a>
+<p>Score: {{ctrl.story.score}} | {{ctrl.story.kids.length}} Comments | By: {{ctrl.story.by}}</p>
 <comment-component></comment-component>
