--- a/js/app/views/post.html
+++ b/js/app/views/post.html
@@ -1,3 +1,2 @@
-<h2>{{ctrl.story.title}}</h2> <a ng-href="{{ctrl.story.url}}">Link</a>
-<p>Score: {{ctrl.story.score}} | {{ctrl.story.kids.length}} Comments | By: {{ctrl.story.by}}</p>
+<post-component story='ctrl.story'></post-component>
 <comment-component></comment-component>
