--- a/views/stories/post.html
+++ b/views/stories/post.html
@@ -1,8 +1,13 @@
-<div ng-controller="PostController as post">
-<div>post</div>
 
-this is a big old post
+<div class="post">
 
-{{post}}
+<div class="item__title">{{post.data[0].title}} by {{post.data[0].by}}</div><br>
+Score: {{post.data[0].score}}<br>
+
+
+
 
 </div>
+
+
+<comments></comments>
