--- a/views/stories/post.html
+++ b/views/stories/post.html
@@ -7,7 +7,10 @@ Score: {{post.data[0].score}}<br>
 
 
 
+<ul ng-repeat="comment in post.data[0].kids">
+
+
+</ul>
+
+
 </div>
-
-
-<comments></comments>
