--- a/views/stories/post.html
+++ b/views/stories/post.html
@@ -9,7 +9,7 @@ Score: {{post.data[0].score}}<br>
 
 <ul ng-repeat="comment in post.data[0].kids">
 
-
+<comments data="{{comment}}"></comments>
 </ul>
 
 
