--- a/views/top.html
+++ b/views/top.html
@@ -6,6 +6,8 @@ asdfasfsdafsdafsafsdfasdfsadf
 
  -->
 <div ng-controller="TopController as top">
+  <a href="" ng-click="top.nextPage()">Next</a>
+<a href="" ng-click="top.lastPage()">Previous</a>
 <ul ng-repeat="post in top.stories" class="posts">
 <div class="item">
 
@@ -17,5 +19,5 @@ Score: {{post.score}}<br>
 Comments: {{post.kids.length}}
 </div>
 </ul>
-<a href="" ng-click="top.nextPage()">Next</a>
+
 </div>
