--- a/app.css
+++ b/app.css
@@ -69,6 +69,11 @@ html, body {
 	float: left;
 }
 
+.pagination ul {
+	list-style: none;
+}
+
+
 .pagination a {
 	display: block;
 	background: rgba(0, 0, 0, 0.1);
