app working, renamed story to post

--- a/js/app/views/post.html
+++ b/js/app/views/post.html
@@ -1,3 +1,3 @@
-<post-component story='ctrl.story'></post-component>
+<post-component post='ctrl.post'></post-component>
 
 <comment-component></comment-component>
