--- a/js/app/views/PostComponent.html
+++ b/js/app/views/PostComponent.html
@@ -1,2 +1,2 @@
-<h2>{{ctrl.story.title}}</h2> <a ng-href="{{ctrl.story.url}}">Link</a>
-<p>Score: {{ctrl.story.score}} | {{ctrl.story.descendants}} Comments | By: {{ctrl.story.by}} | Posted: {{ctrl.story.time}}</p>
+<h2>{{ctrl.post.title}}</h2> <a ng-href="{{ctrl.post.url}}">Link</a>
+<p>Score: {{ctrl.post.score}} | {{ctrl.post.descendants}} Comments | By: {{ctrl.post.by}} | Posted: {{ctrl.post.time}}</p>
