--- a/js/app/views/PostsComponent.html
+++ b/js/app/views/PostsComponent.html
@@ -9,7 +9,7 @@
     </div>
   </div>
 
-  <div class="posts" ng-repeat="story in ctrl.topStories track by story.id">
+  <div class="posts" ng-repeat="story in ctrl.posts track by story.id">
     <h2 class="post__title">{{ $index + 1 }} {{ story.title }} <a ng-href="{{story.url}}">Link</a></h2> 
     <p class="post__description">Score: {{story.score}} | {{story.kids.length}} Comments | By: {{story.by}} | Posted: {{story.time}}  <a ui-sref="post({id: {{story.id}} })">Read More </a>  </p>
    
