--- a/views/item.html
+++ b/views/item.html
@@ -1,26 +1,12 @@
 <div ng-if="item.data">
-    <div ng-switch="item.data.type">
-        <div ng-switch-when="comment">
-            <div>
-                <a ui-sref="user({id: item.data.by })">
-					      {{ item.data.by }}
-				        </a> {{ (item.data.time * 1000) | date: 'short'}}
-            </div>
-            <div ng-bind-html="item.data.text"></div>
-
-            <ul>
-                <li ng-repeat="comment in item.data.kids">
-                    <item></item>
-                </li>
-            </ul>
-        </div>
-        <div ng-switch-when="story">
-            <a href="{{ item.data.url }}" target="_blank">
-				{{ item.data.title }}
-			</a>
-            <a ui-sref="post({id: item.data.id})">
-				{{ item.data.descendants }} comments {{ item.data.score }} points
-			</a>
-        </div>
+    <div>
+        {{ item.data.by }} | {{ (item.data.time * 1000) | date: 'short'}}
     </div>
+    <div ng-bind-html="item.data.text"></div>
+
+    <ul class="comments">
+        <li ng-repeat="comment in item.data.kids">
+            <item id="comment"></item>
+        </li>
+    </ul>
 </div>
