--- a/views/posts.html
+++ b/views/posts.html
@@ -1,7 +1,7 @@
 <!--this goes inside view-->
 <ul class="list-group">
     <li class="list-group-item" dir-paginate="post in vm.posts | itemsPerPage: 30 track by post.id">
-        <p>{{$index + 1}}. <a href="" ui-sref="post({id: post.id})">{{ post.title }}</a></p>
+        <p>{{post.pageId}}. <a href="" ui-sref="post({id: post.id})">{{ post.title }}</a></p>
         <small>Score: {{post.score}} | <a ng-href="{{post.url}}">Original Post Link</a> | comments: {{post.descendants}}</small>
     </li>
 </ul>
