Add getStory method. This issues an HTTP request for a single story based on id.

--- a/views/home.html
+++ b/views/home.html
@@ -1,4 +1,8 @@
 <h1>This is the home template.</h1>
 <div ng-controller="rootController as ctrl">
-  {{ ctrl.stories }}
+  <ul>
+    <li ng-repeat="storyID in ctrl.stories">
+    
+    </li>
+  </ul>
 </div>
