Create paginationFilter. Hardcode in a test array in rootContoller.

--- a/views/home.html
+++ b/views/home.html
@@ -1,8 +1,8 @@
 <h1>This is the home template.</h1>
 <div ng-controller="rootController as ctrl">
   <ul>
-    <li ng-repeat="storyID in ctrl.stories">
-    
+    <li ng-repeat="story in ctrl.filteredList">
+      {{ story }}
     </li>
   </ul>
 </div>
