--- a/views/home.html
+++ b/views/home.html
@@ -1,7 +1,7 @@
 <h1>This is the home template.</h1>
-<div ng-controller="rootController as ctrl">
+<div>
   <ul>
-    <li ng-repeat="story in ctrl.filteredList">
+    <li ng-repeat="story in ctrl.stories">
       {{ story }}
     </li>
   </ul>
