Rename filteredStories to pageOfStories to better reflect the purpose of the array.

--- a/views/home.html
+++ b/views/home.html
@@ -1,7 +1,7 @@
 <h1>This is the home template.</h1>
 <div>
   <ul>
-    <li ng-repeat="story in ctrl.filteredStories">
+    <li ng-repeat="story in ctrl.pageOfStories">
       {{ story }}
     </li>
   </ul>
