--- a/views/post.html
+++ b/views/post.html
@@ -1,10 +1,10 @@
 <h2>
-  Score: {{story.data.score}} - <a href="{{story.data.url}}">{{story.data.title}}</a>
+  Score: {{post.data.score}} - <a href="{{post.data.url}}">{{post.data.title}}</a>
 </h2>
-<h2>by {{story.data.text}} - {{story.data.descendants}} Comments</h2>
+<h2>by {{post.data.text}} - {{post.data.descendants}} Comments</h2>
 
 <ul class="comments">
-  <li ng-repeat="comment in story.data.kids">
+  <li ng-repeat="comment in post.data.kids">
     <comment id="comment"></comment>
   </li>
 </ul>
