Currently in messy state. Home page displays numbered list of story ids.

--- a/views/home.html
+++ b/views/home.html
@@ -1,10 +1,11 @@
 <h1>This is the home template.</h1>
 <div>
   <ol>
-    <li ng-repeat="story in ctrl.pageOfStories" class="item">
-      <a class="item__title" href="{{ story.url }}" target="_blank">
-				{{ story.title }}
-			</a>
+    <li ng-repeat="story in ctrl.stories" class="item">
+      {{ story }}
     </li>
   </ol>
+  <span>Page:</span>
+  <span><a href="" ng-click="ctrl.previous()">Previous</a></span> |
+  <span>Next</span>
 </div>
