Add and register basic 'story' componen.

--- a/views/home.html
+++ b/views/home.html
@@ -1,8 +1,8 @@
 <h1>This is the home template.</h1>
 <div>
   <ol>
-    <li ng-repeat="story in ctrl.stories" class="item">
-      {{ story }}
+    <li ng-repeat="storyID in ctrl.storyIDs" class="item">
+      {{ storyID }}
     </li>
   </ol>
   <span>Page:</span>
