Home template now renders story template via story component. Story template simply says 'This is the story template'.

--- a/views/home.html
+++ b/views/home.html
@@ -2,7 +2,7 @@
 <div>
   <ol>
     <li ng-repeat="storyID in ctrl.storyIDs" class="item">
-      {{ storyID }}
+      <story id="storyID"></story>
     </li>
   </ol>
   <span>Page:</span>
