Story Template now displays title of stories and links to them in a new tab.

--- a/views/story.html
+++ b/views/story.html
@@ -1,1 +1,3 @@
-<h3>This is the story template.</h3>
+<a class="item__title" href="{{ story.data.url }}" target="_blank">
+  {{ story.data.title }}
+</a>
