Story template displays score and number of comments for each story.

--- a/views/story.html
+++ b/views/story.html
@@ -1,3 +1,5 @@
 <a class="item__title" href="{{ story.data.url }}" target="_blank">
   {{ story.data.title }}
 </a>
+<h5>Score: {{ story.data.score }}</h5>
+<h5>Comments: {{ story.data.kids.length }}</h5>
