--- a/views/story.html
+++ b/views/story.html
@@ -1,5 +1,7 @@
 <a class="item__title" href="{{ story.data.url }}" target="_blank">
   {{ story.data.title }}
 </a>
-<h5>Score: {{ story.data.score }}</h5>
-<h5>Comments: {{ story.data.kids.length }}</h5>
+<a class="item__description" ui-sref="story({id: story.data.id})">
+  <h5>Score: {{ story.data.score }}</h5>
+  <h5>Comments: {{ story.data.kids.length }}</h5>
+</a>
