Top Level comments are now displayed when visiting and individual story.

--- a/views/comments.html
+++ b/views/comments.html
@@ -6,5 +6,5 @@
 
 <div ng-repeat="commentID in story.data.kids" class="item">
   <p>Comment Here.</p>
-  <comments id="commentID"></comments>
+  <comment id="commentID"></comment>
 </div>
