Sanitize comments. Comments HTML properly rendered.

--- a/views/comment.html
+++ b/views/comment.html
@@ -1,2 +1,2 @@
 <h1>This is the comment.html partial for the comment component.</h1>
-{{ comment.data.text }}
+<p ng-bind-html="comment.data.text"></p>
