--- a/views/comments.html
+++ b/views/comments.html
@@ -6,5 +6,5 @@
 
 <div ng-repeat="commentID in story.data.kids" class="item">
   <p>Comment Here.</p>
-  <comment id="commentID"></comment>
+  <comment id="commentID" class="comments"></comment>
 </div>
