Turn on paginationFilter to place a limit of  30 stories being displayed at once.

--- a/views/home.html
+++ b/views/home.html
@@ -1,7 +1,7 @@
 <h1>This is the home template.</h1>
 <div>
   <ol>
-    <li ng-repeat="storyID in ctrl.storyIDs" class="item">
+    <li ng-repeat="storyID in ctrl.pageOfStoryIDs" class="item">
       <story id="storyID"></story>
     </li>
   </ol>
