Add Pagination functions to HomeController. Pagination now works as expected.

--- a/views/home.html
+++ b/views/home.html
@@ -5,7 +5,7 @@
       <story id="storyID"></story>
     </li>
   </ol>
-  <span>Page:</span>
+  <span>Page: {{ ctrl.pageNum }}</span>
   <span><a href="" ng-click="ctrl.previous()">Previous</a></span> |
-  <span>Next</span>
+  <span><a href="" ng-click="ctrl.next()">Next</a></span>
 </div>
