--- a/views/home.html
+++ b/views/home.html
@@ -11,7 +11,7 @@
 				<< Previous
 			</a>
 		</li>
-		<li ng-if="top.page < top.totalPages - 1">
+		<li ng-if="top.page < top.pagesTotal">
 			<a href="" ng-click="top.nextPage()">
 				Next >>
 			</a>
