--- a/views/post.html
+++ b/views/post.html
@@ -8,7 +8,7 @@
 
 	<ul class="comments">
 		<li ng-repeat="comment in post.data.kids">
-			<item id="comment"></item>
+			<item id="comment">{{comment}}</item>
 		</li>
 	</ul>
 </div>
