--- a/views/posts.html
+++ b/views/posts.html
@@ -1,1 +1,6 @@
-<h1>Hello!</h1>
+<div ng-controller="NewsController as vm">
+<h4>Here they are:</h4>
+  <ul>
+    <li ng-repeat="post in vm.posts">Post: {{ post }} {{$index}}</li>
+  </ul>
+</div>
