--- a/views/posts.html
+++ b/views/posts.html
@@ -1,6 +1,6 @@
 <div ng-controller="NewsController as vm">
 <h4>Here they are:</h4>
   <ul>
-    <li ng-repeat="post in vm.posts">Post: {{ post }} {{$index}}</li>
+    <li ng-repeat="post in vm.posts" ng-show="">Post: {{ post }} {{$index}}</li>
   </ul>
 </div>
