--- a/views/post.html
+++ b/views/post.html
@@ -1,13 +1,16 @@
 <div ng-app="app" ui-sref-active="active">
-<h4>Post: {{post.title}}</h4>
-<p>score = {{post.score}}</p>
+  <h4>Post: {{post.title}}</h4>
+    <p>score = {{post.score}}</p>
 <!-- <button ng-click="call">click</button> -->
-<p>by: {{post.author}}</p>
-<a href="{{post.url}}">{{post.url}}</a>
-<p>Comments:</p>
-<ul ng-repeat="comment in post.comments">
-  <li>Comment: <a ng-app="app" href="" ui-sref-active="active" class="active" ui-sref='post ({id: {{comment}} })'>{{comment}}</a>, {{$index}}</li>
-</ul>
+    <p>by: {{post.author}}</p>
+    <a href="{{post.url}}">{{post.url}}</a>
+    <p>Comments:</p>
+  <ul ng-repeat="comment in post.comments">
+    <li>Comment: <comment comment="post.comment" /><a ng-app="app" href="" ui-sref-active="active" class="active" ui-sref='post ({id: {{comment}} })'>{{comment}}</a>, {{$index}}</li>
+  </ul>
 </div>
 
-<!-- <li>Post: <a ng-app="app" href="" ui-sref-active="active" class="active" ui-sref='post({id: {{post.id}} , comment_id: {{comment}} })'>{{post}}</a>, {{$index}}</li> -->
+<!-- <div ng-bind-html="comment">
+<comment comment="post.comment" />
+{{comment}}
+</div> -->
