--- a/views/post.html
+++ b/views/post.html
@@ -1,16 +1,11 @@
-<div ng-app="app" ui-sref-active="active">
-  <h4>Post: {{post.title}}</h4>
-    <p>score = {{post.score}}</p>
-<!-- <button ng-click="call">click</button> -->
-    <p>by: {{post.author}}</p>
-    <a href="{{post.url}}">{{post.url}}</a>
+<div class="post" ng-app="app" ui-sref-active="active">
+  <h4 class="post__title">Post: {{post.data.title}}</h4>
+    <p>score = {{ post.data.score }}</p>
+    <p>by: {{ post.data.by }}</p>
+    <a href="{{post.url}}">{{ post.data.url }}</a>
     <p>Comments:</p>
-  <ul ng-repeat="comment in post.comments">
-    <li>Comment: <comment comment="post.comment" /><a ng-app="app" href="" ui-sref-active="active" class="active" ui-sref='post ({id: {{comment}} })'>{{comment}}</a>, {{$index}}</li>
+  <ul class="comments" ng-repeat="comment in post.data.kids">
+    <li><comment id="comment"/></li>
+<!-- using comment component on every comment in post.data.kids -->
   </ul>
 </div>
-
-<!-- <div ng-bind-html="comment">
-<comment comment="post.comment" />
-{{comment}}
-</div> -->
