--- a/views/item.html
+++ b/views/item.html
@@ -12,7 +12,7 @@
 
       <ul class="comments">
         <li ng-repeat="comment in item.data.kids">
-          <item id="comment"></item>
+          <item id="{{comment}}"></item>
         </li>
       </ul>
     </div>
