--- a/views/post.html
+++ b/views/post.html
@@ -4,3 +4,7 @@
     <a ui-sref="post/{{post.id}}">More Detail</a>
   </div>
 </div>
+
+
+
+<script src="js/app/controllers/PostController.js"></script>
