--- a/views/top.html
+++ b/views/top.html
@@ -1,13 +1,25 @@
-<div ng-controller="TopController as top">
-<div class="top">
-  <h4>Top Stories</h4>
-  <div ng-repeat="post in top.top">
-    <p>{{post.url}}</p>
-    <p>{{post.comments.count}}</p>
-    <p>{{post.score}}</p>
+<div>
+<h4>Top Stories</h4>
+<ul class="top">
+  <li ng-repeat="post in top.posts">
+    <item id="post"></item>
+  </li>
+</ul>
+
+<div>
+    <ul class="pagination">
+      <li ng-if="top.page > 0">
+        <a href="" ng-click="top.previousPage()">
+          << Previous
+        </a>
+      </li>
+      <li ng-if="top.page < top.totalPages - 1">
+        <a href="" ng-click="top.nextPage()">
+          Next >>
+        </a>
+      </li>
+    </ul>
+
+    <div style="clear: both;"></div>
   </div>
 </div>
-</div>
-
-
-<script src="js/app/controllers/TopController.js"></script>
