--- a/views/top.html
+++ b/views/top.html
@@ -1,7 +1,13 @@
 <div>
 <h4>Top Stories</h4>
 <ul class="top">
-  <li ng-repeat="post in top.posts">
+  <li ng-repeat="post in top.detail">
+    <a class="post__title" href="{{ post.value.data.url }}" target="_blank">
+    {{ post.value.data.title }}
+  </a>
+  <a class="post__description">
+    {{ post.value.data.descendants }} comments {{ post.value.data.score }} points
+  </a>
     <item id="post"></item>
   </li>
 </ul>
