--- a/views/top-stories.html
+++ b/views/top-stories.html
@@ -1,3 +1,7 @@
 <div class="top-stories">
   <h1>Top Stories!</h1>
+  <ul>
+    <li ng-repeat="story in ctrl.stories">{{story}}</li>
+  </ul>
+  <div ui-view>
 </div>
