edit top stories

--- a/views/topstories.html
+++ b/views/topstories.html
@@ -4,4 +4,11 @@ Hello
 
 <ul>
   <li ng-repeat="post in topStories.posts"></li>
+    {{ topStories.post(post) }}
+</ul>
+
+<ul>
+  <li>Story, its # of comments, its score <a href="" ui-sref="post">View Story</a></li>
+  <li>Story, its # of comments, its score  <a href="" ui-sref="post">View Story</a></li>
+  <li>etc <a href="" ui-sref="post">View Story</a></li>
 </ul>
