save before trying something

--- a/views/topstories.html
+++ b/views/topstories.html
@@ -1,14 +1,20 @@
-{{ topStories.posts }}
+<!-- {{ topStories.posts }}
 
 Hello
 
 <ul>
   <li ng-repeat="post in topStories.posts"></li>
     {{ topStories.post(post) }}
-</ul>
+</ul> -->
 
 <ul>
   <li>Story, its # of comments, its score <a href="" ui-sref="post">View Story</a></li>
   <li>Story, its # of comments, its score  <a href="" ui-sref="post">View Story</a></li>
   <li>etc <a href="" ui-sref="post">View Story</a></li>
+</ul>
+
+<ul>
+  <li ng-repeat="post in topStories.posts">
+    <h1>{{ post }}</h1>
+  </li>
 </ul>
